--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5,8 +5,11 @@
     android:versionName="1.0" >
 
     <uses-sdk
-        android:minSdkVersion="8"
+        android:minSdkVersion="11"
         android:targetSdkVersion="17" />
+    
+      <uses-permission android:name="android.permission.SET_DEBUG_APP"></uses-permission>
+    
 
     <application
         android:allowBackup="true"
