--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:targetSdkVersion="17" />
     
       <uses-permission android:name="android.permission.SET_DEBUG_APP"></uses-permission>
-    
+      <uses-permission android:name="android.permission.READ_CALENDAR" />
+      <uses-permission android:name="android.permission.WRITE_CALENDAR" />
 
     <application
         android:allowBackup="true"
